--- a/Exo1/index.html
+++ b/Exo1/index.html
@@ -192,18 +192,21 @@
             }
         }
 
-
         class Square extends React.Component {
 
             constructor(props) {
                 super(props);
             }
-
             render() {
+                const divStyle = {
+                    background: this.props.colors,
+                    height: '100px',
+                    width: '100px',
+                    display: 'inline-block',
+                    border:'solid',
+                };
                 return (
-                    <div>
-                        <Post />
-                    </div>
+                    <div style={divStyle}></div>
                 )
             }
         }
@@ -212,33 +215,32 @@
 
             constructor(props) {
                 super(props);
-                const colors = [
+                this.colors = [
                     "#1e88e5",
                     "#6ab7ff",
                     "#005cb2",
                     "#1976d2",
                 ];
+                this.list_square = []
             }
 
+            randomcolors() {
+                return this.colors[Math.floor(Math.random() * this.colors.length)];
+            }
+
+
             render() {
+
+                for (let n = 0; n <=15; n++) {
+                    this.list_square.push(<Square key={n} color={this.randomcolors()}/>);
+                    if(n % this.colors.length == 3) this.list_square.push(<br/>)
+                }
+                
                 return (
-                    <div>
-                        <Post />
-                    </div>
+                    this.list_square
                 )
             }
         }
-
-        class Damier extends React.Component {
-            render() {
-                return (
-                    <div>
-                        <Post />
-                    </div>
-                )
-            }
-        }
-
 
         class Hash extends React.Component {
             constructor(props) {
@@ -259,10 +261,9 @@
                     elems: numbersObject
                 }));
             }
-            
 
-            handler(key,event){
-                console.log(key);
+
+            handler(key, event) {
                 let filter_array = this.state.elems.filter(elems => elems.key != key);
                 this.setState((props) => ({
                     elems: filter_array
@@ -300,8 +301,6 @@
             }
         }
 
-
-
         class DashboardHash extends React.Component {
 
             constructor(props) {
@@ -309,7 +308,7 @@
                 this.state = { elems: [] }
             }
 
-            removeHandler(){
+            removeHandler() {
 
             }
 
@@ -317,20 +316,21 @@
             render() {
                 return (
                     <div>
-                        <Hash elems={this.state.elems} remove={this.removeHandler}/>
+                        <Hash elems={this.state.elems} remove={this.removeHandler} />
                     </div>
                 )
             }
 
         }
 
+
         ReactDOM.render(
             // <App choice="Dragon" />,
             // <Clock message="Hello Clock" />,
             // <AllCounter />,
             // <AppPost />,
-            // <Damier />,
-            <DashboardHash/>,
+            <Checkerboard />,
+            // <DashboardHash />,
             document.getElementById('root')
         );
 
